man-db 2.7.4
============

Major changes since man-db 2.7.3:

	Fixes:
	------

	o Fix crash when eliminating manpath duplicates if canonicalising a
	  manpath entry fails.

	o Fix a build system bug that sometimes caused substitutions in
	  manual pages to be left unexpanded.

man-db 2.7.3 (9 September 2015)
===============================

Major changes since man-db 2.7.2:

	Fixes:
	------

	o Tools that consider the terminal line length now try the
	  TIOCGWINSZ ioctl on /dev/tty as well as standard input/output.

	o mandb does a better job of coping with index files having
	  incorrect ownership.

	o Squeeze blank lines internally rather than relying on the pager
	  supporting the -s option.

	o Fix use-after-free in ult_src.

	o Fix crash when running from a missing and unreadable current
	  directory, such as an orphaned subdirectory of /proc.

	o Restore the ability to use 'man -a' noninteractively.

man-db 2.7.2 (16 August 2015)
=============================

Major changes since man-db 2.7.1:

	Fixes:
	------

	o 'man -k' and 'man -f' now pass any provided -l option through to
	  the underlying apropos/whatis programs.

	o apropos and whatis no longer truncate names if long output was
	  requested.

	o The database handle is no longer stored in a global variable,
	  fixing a class of possible double-close bugs.

man-db 2.7.1 (7 November 2014)
==============================

Major changes since man-db 2.7.0.2:

	Fixes:
	------

	o Various portability fixes for Solaris, contributed by Peter Bray.

	o man now runs correctly when its current working directory has been
	  deleted.  (As a result of this fix, man-db now requires
	  libpipeline >= 1.4.0.)

	o 'man -a' sends its prompts to /dev/tty rather than to stderr, and
	  likewise reads replies from /dev/tty rather than from stdin.

man-db 2.7.0.2 (28 September 2014)
==================================

Major changes since man-db 2.7.0.1:

	Fixes:
	------
