@@ -12,6 +12,9 @@ Major changes since man-db 2.7.3:
 	o Fix a build system bug that sometimes caused substitutions in
 	  manual pages to be left unexpanded.
 
+	o man exits with status 3 rather than 0 if its formatting command
+	  exits non-zero, even if its display command exits zero.
+
 man-db 2.7.3 (9 September 2015)
 ===============================
 
